--- a/trabalho1.html
+++ b/trabalho1.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
   <head>
+    <link rel="stylesheet" href="trabalho1.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
+
     <div class="curriculo">
 
       <div class="titulo">
 
-        <h1>NOME</h1>
-        <h2>SOBRENOME</h2>
+        <div class="nome">
+          <h1>Kenji</h1>
+          <h1>Erick</h1>
+        </div>
 
         <div class="info">
           <ul>
@@ -20,6 +24,12 @@
            Perfil do Linkedin <img src="https://image.flaticon.com/icons/png/512/16/16066.png" height="15" alt="">  <br>
            Twitter/Blog/Portfolio  <img src="http://chittagongit.com//images/white-website-icon-png/white-website-icon-png-25.jpg" height="15" alt="">
           </ul>
+
+        </div>
+
+        <div class="nulo">
+
+
         </div>
 
       </div>
@@ -28,22 +38,40 @@
         <ul>
 
           <div class="obj">
-            <h1><img src="https://image.flaticon.com/icons/png/512/8/8738.png" height="30" alt=""> OBJETIVO </h1> <br>
+          <div class="icone">
+            <img src="https://image.flaticon.com/icons/png/512/8/8738.png" height="30" alt=""> OBJETIVO <br>
+          </div>
             Criar um site para curriculo de qualidade para ser vendido por 7 conto ou menos
           </div>
 
           <div class="educ">
-            <h1><img src="https://thumbs.dreamstime.com/t/%C3%ADcone-circular-preto-e-branco-do-chap%C3%A9u-da-gradua%C3%A7%C3%A3o-faculdade-isolado-no-112851679.jpg" height="30" alt=""> EDUCAÇÃO </h1> <br>
+          <div class="icone">
+            <img src="https://thumbs.dreamstime.com/t/%C3%ADcone-circular-preto-e-branco-do-chap%C3%A9u-da-gradua%C3%A7%C3%A3o-faculdade-isolado-no-112851679.jpg" height="30" alt=""> EDUCAÇÃO <br>
+          </div>
             <h2> JORNALISMO | FACHA </h2>
-            <div class="educ">
+            <div class="data">
               DATAS DE - ATÉ
             </div>
             colocar sobre medias, premios, homenagens, trabalhos acabemicos e tudo mais
           </div>
 
           <div class="exp">
-
+          <div class="icone">
+            <img src="https://img2.gratispng.com/20180429/baq/kisspng-computer-icons-circle-symbol-round-colored-balls-5ae57a5f4e9a86.984627941524988511322.jpg" height="30" alt=""> EXPERIÊNCIAS <br>
           </div>
+            <h2>Cargo | Empresa</h2>
+            <div class="data">
+              DATAS DE - ATÉ
+            </div>
+
+            <div class="habilidades">
+              <div class="icone">
+                  <img src="https://image.flaticon.com/icons/svg/23/23403.svg" height="30" alt="">
+              </div>
+
+            </div>
+          </div>
+
         </ul>
       </div>
     </div>
