Um pouco de formatação e termino da base de html

--- a/trabalho1.html
+++ b/trabalho1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet">
     <link rel="stylesheet" href="trabalho1.css">
     <meta charset="utf-8">
     <title></title>
@@ -12,8 +13,8 @@
       <div class="titulo">
 
         <div class="nome">
-          <h1>Kenji</h1>
-          <h1>Erick</h1>
+          <h1>Kenji<br>
+          Erick</h1>
         </div>
 
         <div class="info">
@@ -37,36 +38,39 @@
       <div class="corpo">
         <ul>
 
-          <div class="obj">
+          <div class="item">
           <div class="icone">
-            <img src="https://image.flaticon.com/icons/png/512/8/8738.png" height="30" alt=""> OBJETIVO <br>
+            <h2><img src="https://image.flaticon.com/icons/png/512/8/8738.png" height="30" alt=""> OBJETIVO <br> </h2>
           </div>
             Criar um site para curriculo de qualidade para ser vendido por 7 conto ou menos
           </div>
 
-          <div class="educ">
+          <div class="item">
           <div class="icone">
-            <img src="https://thumbs.dreamstime.com/t/%C3%ADcone-circular-preto-e-branco-do-chap%C3%A9u-da-gradua%C3%A7%C3%A3o-faculdade-isolado-no-112851679.jpg" height="30" alt=""> EDUCAÇÃO <br>
+            <h2> <img src="https://thumbs.dreamstime.com/t/%C3%ADcone-circular-preto-e-branco-do-chap%C3%A9u-da-gradua%C3%A7%C3%A3o-faculdade-isolado-no-112851679.jpg" height="30" alt=""> EDUCAÇÃO <br> </h2>
           </div>
-            <h2> JORNALISMO | FACHA </h2>
-            <div class="data">
-              DATAS DE - ATÉ
+            <div class="titulo2">
+              <h3>Técnico Informática | IFPR - Campus Paranavaí</h3>
             </div>
             colocar sobre medias, premios, homenagens, trabalhos acabemicos e tudo mais
           </div>
 
-          <div class="exp">
+          <div class="item">
           <div class="icone">
-            <img src="https://img2.gratispng.com/20180429/baq/kisspng-computer-icons-circle-symbol-round-colored-balls-5ae57a5f4e9a86.984627941524988511322.jpg" height="30" alt=""> EXPERIÊNCIAS <br>
+            <h2><img src="https://img2.gratispng.com/20180429/baq/kisspng-computer-icons-circle-symbol-round-colored-balls-5ae57a5f4e9a86.984627941524988511322.jpg" height="30" alt=""> EXPERIÊNCIAS <br> </h2>
           </div>
-            <h2>Cargo | Empresa</h2>
-            <div class="data">
-              DATAS DE - ATÉ
+            <div class="titulo2">
+
             </div>
 
-            <div class="habilidades">
+
+            <div class="item">
               <div class="icone">
-                  <img src="https://image.flaticon.com/icons/svg/23/23403.svg" height="30" alt="">
+                  <h2><img src="https://image.flaticon.com/icons/svg/23/23403.svg" height="30" alt=""> HABILIDADES <br> </h2>
+              </div>
+
+              <div class="item">
+                <h2><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCdSMFywgoixfFCh8zvhk2ztMrEfSNrRLVWahnB4T_1E73Ui3j" height="30" alt=""> ATIVIDADES <br> </h2>
               </div>
 
             </div>
