--- a/trabalho1.html
+++ b/trabalho1.html
@@ -38,11 +38,11 @@
       <div class="corpo">
         <ul>
 
-          <div class="item">
+            <div class="item">
           <div class="icone">
             <h2><img src="https://image.flaticon.com/icons/png/512/8/8738.png" height="30" alt=""> OBJETIVO <br> </h2>
           </div>
-            Criar um site para curriculo de qualidade para ser vendido por 7 conto ou menos
+            Criar um site com curriculo usando html e css
           </div>
 
           <div class="item">
@@ -52,12 +52,15 @@
             <div class="titulo2">
               <h3>Técnico Informática | IFPR - Campus Paranavaí</h3>
             </div>
-            colocar sobre medias, premios, homenagens, trabalhos acabemicos e tudo mais
           </div>
 
           <div class="item">
           <div class="icone">
             <h2><img src="https://img2.gratispng.com/20180429/baq/kisspng-computer-icons-circle-symbol-round-colored-balls-5ae57a5f4e9a86.984627941524988511322.jpg" height="30" alt=""> EXPERIÊNCIAS <br> </h2>
+            <div class="titulo2">
+              <h3>Aluno | IFPR - Campus Paranavaís</h3>
+            </div>
+            Aulas praticas feitas em sala de aula e participações em projetos de ensino
           </div>
             <div class="titulo2">
 
@@ -67,6 +70,7 @@
             <div class="item">
               <div class="icone">
                   <h2><img src="https://image.flaticon.com/icons/svg/23/23403.svg" height="30" alt=""> HABILIDADES <br> </h2>
+
               </div>
 
               <div class="item">
